@@ -6,6 +6,7 @@
 * Added [#10516] should_include should be able to accept multiple items
 * Applied [#10631] redirect_to matcher doesn't respect request.host (Patch from Tim Lucas)
 * Each formatter now flushes their own IO. This is to avoid buffering of output.
+* Fixed [#10670] IVarProxy#delete raises exception when instance variable does not exist
 
 == Version 0.9.3
 This is a bugfix release.
